[gd_scene load_steps=7 format=3 uid="uid://dffe3vl8e2t63"]

[ext_resource type="Script" path="res://Scenes/UI/ui.gd" id="1_6br3s"]
[ext_resource type="Script" path="res://Scenes/UI/options_ui.gd" id="2_frg18"]
[ext_resource type="Texture2D" uid="uid://cq6hxvvuvoncy" path="res://Assets/IconSlime.png" id="4_4jmrg"]
[ext_resource type="PackedScene" uid="uid://3ll3g32p81h6" path="res://Scenes/UI/options.tscn" id="4_wle8v"]
[ext_resource type="Texture2D" uid="uid://b8bdvx46d52n7" path="res://Assets/IconDeadSlime.png" id="5_uwl02"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j1emb"]
bg_color = Color(0.13, 0.13, 0.13, 0.368627)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_6br3s")

[node name="Menu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BG" type="ColorRect" parent="Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.498039)

[node name="Panel" type="Panel" parent="Menu"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_j1emb")

[node name="Margin" type="MarginContainer" parent="Menu/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="Menu/Panel/Margin"]
layout_mode = 2
theme_override_constants/separation = 33

[node name="Play" type="Button" parent="Menu/Panel/Margin/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
text = "Return"

[node name="Options" type="Button" parent="Menu/Panel/Margin/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
text = "Options"

[node name="Exit" type="Button" parent="Menu/Panel/Margin/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
text = "Exit
"

[node name="Options" parent="." instance=ExtResource("4_wle8v")]
visible = false
script = ExtResource("2_frg18")

[node name="SlugCounter" type="Control" parent="."]
custom_minimum_size = Vector2(120, 68)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Margin" type="MarginContainer" parent="SlugCounter"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10

[node name="Panel" type="Panel" parent="SlugCounter/Margin"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="SlugCounter/Margin/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxSlime" type="HBoxContainer" parent="SlugCounter/Margin/Panel/VBox"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="SlugCounter/Margin/Panel/VBox/HBoxSlime"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("4_4jmrg")

[node name="CounterSlime" type="Label" parent="SlugCounter/Margin/Panel/VBox/HBoxSlime"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
text = "1
"

[node name="HBoxDead" type="HBoxContainer" parent="SlugCounter/Margin/Panel/VBox"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="SlugCounter/Margin/Panel/VBox/HBoxDead"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("5_uwl02")

[node name="CounterDead" type="Label" parent="SlugCounter/Margin/Panel/VBox/HBoxDead"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
text = "0
"

[connection signal="pressed" from="Menu/Panel/Margin/VBox/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Menu/Panel/Margin/VBox/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Menu/Panel/Margin/VBox/Exit" to="." method="_on_exit_pressed"]
